--- a/src/pages/gamePage.css
+++ b/src/pages/gamePage.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+
 .game-container {
     font-family: Arial, sans-serif;
     margin: 2rem auto;
